# embodied-persona-bench

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  manifest.csv  manifest.example.csv
data/labels/: so101_brukg_5e97ca9.placeholder.json
data/urdf_snapshots/: NAMING.md  PROVENANCE.template.txt
data/urdf_snapshots/fetch/fetch_ros_d22b98f/: PROVENANCE.txt  embodiment.json  robot.urdf
data/urdf_snapshots/lekiwi/sig_uiuc_f93df541/: PROVENANCE.txt  embodiment.json
data/urdf_snapshots/misty/misty_ros_74b5706/: PROVENANCE.txt  embodiment.json  robot.urdf
data/urdf_snapshots/nao/jrl_v40_6f4e94b/: PROVENANCE.txt  embodiment.json  robot.urdf
data/urdf_snapshots/pepper/jrl_b953b44/: PROVENANCE.txt  embodiment.json  robot.urdf
data/urdf_snapshots/pr2/pr2_common_9a8e4fb/: PROVENANCE.txt  embodiment.json  robot.urdf
docker/: Dockerfile  docker-compose.dev.yml  entrypoint.sh
docs/: ANNOTATION.md
examples/: label.example.json  minimal.urdf
schema/: persona_label.schema.json
scripts/: close_loop_so101.py  emit_so100_flat_urdf.py  extract_urdf_features.py  render_meshes_preview.py  serve_urdf_viewer.py  validate_label.py
src/epbench/: __init__.py
tests/: test_example_label.py  test_extract_a1.py  test_extract_fetch.py  test_extract_h1.py  test_extract_h2.py  test_extract_lekiwi.py  test_extract_misty.py  test_extract_nao.py  test_extract_pepper.py  test_extract_pr2.py  test_extract_r1.py  test_extract_so100.py  test_label_so101.py
tools/: annotate_app.py  ratings_api.py
tools/urdf_viewer/: index.html
(+14 files in other folders)
