[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "embodied-persona-bench"
version = "0.1.0"
description = "Tools and schemas for the embodied persona benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "matplotlib>=3.7",
  "numpy-stl>=3.0",
  "numpy>=1.24",
]
urdf = [
  "yourdfpy>=0.0.53",
]
annotate = [
  "streamlit>=1.28",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
